# MinutesX

./: .gitignore  README.md  Start-MinutesX.bat  pyproject.toml
minutesx/: __init__.py  app.py  audio.py  settings.py  summarizer.py  transcriber.py  writer.py
